<resources>
    <string name="app_name">NoteApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="search_settings">Search</string>
    <string name="share_setting">share</string>
    <string name="delete_setting">delete</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="create_note">Create Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="save_note">Save Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="share_note">Share Note</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_create_note">Create Note Widget</string>
    <string name="alarm">alarm</string>
    <string name="logout">Logout</string>
    <string name="change_theme">Change Theme</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="sign_out">Sign Out</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="hello_there">Hello there!</string>
    <string name="write_note">Write Note</string>
    <string name="click_note">Click Note</string>
    <string name="list">list</string>
    <string name="note_is_empty">Note is empty</string>
    <string name="note_saved">Note Saved</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="logging_out">Logging Out</string>
    <string name="alarm_already_set">Alarm already set</string>
    <string name="invalid_alarm_time">Invalid time.Set reminder for a value greater than curent time</string>
    <string name="confirm">Confirm</string>
    <string name="save_data_dialog">Do you want to save data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="datepicker">DatePicker</string>
    <string name="create_new_note">Create New Note</string>
    <string name="create">Create</string>
    <string name="saving">Saving</string>
    <string name="save">Save</string>
    <string name="loading_list">Loading list...</string>
    <string name="reminder">Reminder</string>
    <!--<string name="default_web_client_id">652569048309-n3hrkm6vg1v4v8lap1jfvg598mjdgo63.apps.googleusercontent.com</string>-->
</resources>
