<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/widget_activity_main"
    android:orientation="vertical"
    tools:context=".NoteAppWidget">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/appbar_elevation"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/layout_margin"
            android:text="@string/app_name"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical|right|end"
            android:adjustViewBounds="false"
            android:id="@+id/widget_create_note"
            android:background="@android:color/transparent"
            android:contentDescription="@string/widget_create_note"
            android:src="@drawable/ic_create_black_24dp"
            android:layout_marginRight="@dimen/layout_margin" />
    </LinearLayout>

    <ListView
        android:padding="@dimen/layout_margin"
        android:contentDescription="@string/click_note"
        android:divider="@color/cardview_dark_background"
        android:id="@+id/widget_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
