<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:clickable="true"
    android:focusable="true"
    card_view:cardBackgroundColor="@color/secondary_light_color"
    card_view:cardCornerRadius="@dimen/text_padding"
    card_view:cardElevation="@dimen/card_elevation"
    android:layout_margin="@dimen/layout_margin"
    tools:showIn="@layout/activity_main"
    app:pressedTranslationZ="@dimen/card_pressed_elevation"
    card_view:cardUseCompatPadding="true">
    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="@dimen/text_padding"
            android:id="@+id/edit_note"
            android:background="@color/text_background_grey"
            android:text="@string/hello_there"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                style="@style/button"
                android:layout_margin="8dp"
                android:translationZ="6dp"
                android:elevation="@dimen/button"
                android:nextFocusUp="@+id/search_icon"
                android:nextFocusRight="@+id/delete_button"
                android:nextFocusLeft="@id/relative_layout"
                android:contentDescription="@string/edit_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_button"
                android:background="@drawable/button_highlight"
                android:src="@drawable/ic_edit_black_18dp"/>
            <ImageButton
                style="@style/button"
                android:id="@+id/delete_button"
                android:elevation="@dimen/button"
                android:translationZ="6dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/delete_note"
                android:nextFocusRight="@+id/share_button"
                android:nextFocusLeft="@id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_highlight"
                android:src="@drawable/ic_delete_black_18dp"/>
            <ImageButton
                style="@style/button"
                android:elevation="@dimen/button"
                android:translationZ="6dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/share_note"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:nextFocusRight="@+id/alarm_button"
                android:nextFocusLeft="@id/delete_button"
                android:layout_height="wrap_content"
                android:id="@+id/share_button"
                android:background="@drawable/button_highlight"
                android:src="@drawable/ic_share_black_18dp"/>
            <ImageButton
                style="@style/button"
                android:elevation="@dimen/button"
                android:layout_margin="8dp"
                android:translationZ="6dp"
                android:contentDescription="@string/set_alarm"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:nextFocusLeft="@id/share_button"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_button"
                android:nextFocusDown="@+id/fab"
                android:background="@drawable/button_highlight"
                android:src="@drawable/ic_notifications_black_18dp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
